HSTTWO-1349: Fixing problems of Performance found by FindBug
svn path=/ecm/site-toolkit/trunk/; revision=25187